fix no wrap in contscts items

--- a/app/css/pages/home/hero.scss
+++ b/app/css/pages/home/hero.scss
@@ -80,6 +80,7 @@
 
     &-item {
       padding: 0 25px;
+      white-space: nowrap;
     }
 
     &-text {
